--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+<!-- #Template (shared Jacksonian Concept 1) -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,6 +22,7 @@
                 <input type="text" name="title" placeholder="Enter Task..."><br>
             </div>
             <!-- #localStyle --> 
+            <!-- #Button (shared Jacksonian concept 2) -->
             <button class="ui blue button" type="submit">Add Task</button>
         </form>
 
@@ -28,6 +30,7 @@
 
         {% for todo in todo_list %}
         <div class="ui segment">
+            <!-- #Property (shared Jacksonian concept 3) -->
             <p class="ui big header">{{todo.id }} | {{ todo.title }}</p>
 
             {% if todo.complete == False %}
